# coreinsight_cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
coreinsight/: Dockerfile.cpp-sandbox  Dockerfile.python-sandbox  __init__.py  analyzer.py  config.py  embeddings.py  hardware.py  indexer.py  main.py  memory.py  parser.py  profiler.py  prompts.py  sandbox.py  scanner.py  tui.py
coreinsight/demo/: bad_loop.py  data_processor.py  slow.cpp
coreinsight/prompts/: __init__.py  _base.py  bottleneck.py  harness.py  optimizer.py  test_cases.py
docs/: index.html
test/: bad_loop.py  data_processor.py
test/cpp_test/: slow.cpp
test/cuda_test/: kernel.cu
test/python_test/: slow_deep_learning.py
